# hlavi-api

./: .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml
.github/workflows/: auto-release.yml  pr-preview.yml  release.yml  tag.yml  version-bump.yml
src/: main.rs
src/handlers/: board.rs  health.rs  mod.rs  tasks.rs  tickets.rs
src/models/: mod.rs
