[package]
name = "hlavi-api"
version = "0.1.1"
edition = "2021"
authors = ["M Muhlari Holdings (Pty) Ltd"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/mmuhlariholdings/hlavi-api"
homepage = "https://hlavi.com"
description = "HTTP API server for Hlavi kanban task management"
rust-version = "1.75"

[[bin]]
name = "hlavi-api"
path = "src/main.rs"

[dependencies]
# Core library - using git dependency with tag for version control
# Update to tag when a new version is released
hlavi-core = { git = "https://github.com/mmuhlariholdings/hlavi-core", tag = "v0.1.14" }

# Agent library - using git dependency with branch for version control
# Update to tag when a stable version is released
hlavi-agent = { git = "https://github.com/mmuhlariholdings/hlavi-agent", branch = "main" }

# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
hyper = "1.1"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

[dev-dependencies]
tokio-test = "0.4"
